--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
    <h1>Olá mundo! Meu primeiro site em repositório!</h1> 
    <hr>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, ducimus pariatur aspernatur, doloremque, quia officia minima assumenda quo veritatis eius necessitatibus sapiente molestiae tempore! Magni iusto id doloremque harum mollitia.</p>
+   <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta dolorem aspernatur saepe deserunt voluptatibus dolores, ab culpa sint quos quidem sed asperiores temporibus vero sapiente ipsam a delectus voluptate doloribus.</p>
 </body>
 </html>
